force-app/main/default/objects/CARE_Household_Member_Income__c/CARE_Household_Member_Income__c.object-meta.xml
<CustomObject>
    <label>CARE Household Member Income</label>
    <nameField>
        <displayFormat>CTMI{0000000000}</displayFormat>
        <label>NAME (Member Income Seq)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CARE Household Member Income</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>