force-app/main/default/objects/CARE_Household_Member_Income__c/fields/ADJ_2B__c.field-meta.xml
<CustomField>
    <fullName>ADJ_2B__c</fullName>
    <label>ADJ 2B</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>