force-app/main/default/objects/CARE_Household_Member_Income__c/fields/Adj_3A__c.field-meta.xml
<CustomField>
    <fullName>Adj_3A__c</fullName>
    <label>Adj 3A</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>