force-app/main/default/objects/CARE_Household_Member_Income__c/fields/ADJ_4A__c.field-meta.xml
<CustomField>
    <fullName>ADJ_4A__c</fullName>
    <label>ADJ 4A</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>