force-app/main/default/objects/CARE_Household_Member_Income__c/fields/Adj_4C__c.field-meta.xml
<CustomField>
    <fullName>Adj_4C__c</fullName>
    <label>Adj 4C</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>