force-app/main/default/objects/CARE_Household_Member_Income__c/fields/AMOUNT1__c.field-meta.xml
<CustomField>
    <fullName>AMOUNT1__c</fullName>
    <label>AMOUNT1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>