force-app/main/default/objects/CARE_Household_Member_Income__c/fields/AMOUNT2__c.field-meta.xml
<CustomField>
    <fullName>AMOUNT2__c</fullName>
    <label>AMOUNT2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>