force-app/main/default/objects/CARE_Household_Member_Income__c/fields/Amount_3__c.field-meta.xml
<CustomField>
    <fullName>Amount_3__c</fullName>
    <label>Amount 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>