force-app/main/default/objects/CARE_Household_Member_Income__c/fields/CARE_Application__c.field-meta.xml
<CustomField>
    <fullName>CARE_Application__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Application</label>
    <referenceTo>CARE_Application__c</referenceTo>
    <relationshipLabel>CARE Household Member Income</relationshipLabel>
    <relationshipName>CARE_Household_Member_Income</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>