force-app/main/default/objects/CARE_Household_Member_Income__c/fields/CARE_DocTypeCode__c.field-meta.xml
<CustomField>
    <fullName>CARE_DocTypeCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DocTypeCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>