force-app/main/default/objects/CARE_Household_Member_Income__c/fields/CARE_Household_Member__c.field-meta.xml
<CustomField>
    <fullName>CARE_Household_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Household Member</label>
    <referenceTo>CARE_Household_Member__c</referenceTo>
    <relationshipLabel>CARE Household Member Income</relationshipLabel>
    <relationshipName>CARE_Household_Member_Income</relationshipName>
    <type>Lookup</type>
</CustomField>