force-app/main/default/objects/CARE_Household_Member_Income__c/fields/DISCOUNT_LENGTH_IN_DAYS__c.field-meta.xml
<CustomField>
    <fullName>DISCOUNT_LENGTH_IN_DAYS__c</fullName>
    <label>DISCOUNT LENGTH IN DAYS</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>