force-app/main/default/objects/CARE_Household_Member_Income__c/fields/Document_Complete__c.field-meta.xml
<CustomField>
    <fullName>Document_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Complete</label>
    <type>Checkbox</type>
</CustomField>