force-app/main/default/objects/CARE_Household_Member_Income__c/fields/EST_SALARY__c.field-meta.xml
<CustomField>
    <fullName>EST_SALARY__c</fullName>
    <label>EST SALARY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>