force-app/main/default/objects/CARE_Household_Member_Income__c/fields/EXTERNAL_IMAGE_ID__c.field-meta.xml
<CustomField>
    <fullName>EXTERNAL_IMAGE_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EXTERNAL IMAGE ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>