force-app/main/default/objects/CARE_Household_Member_Income__c/fields/HOUSEHOLD_DETAIL__c.field-meta.xml
<CustomField>
    <fullName>HOUSEHOLD_DETAIL__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>HOUSEHOLD DETAIL</label>
    <referenceTo>CARE_Household_Detail__c</referenceTo>
    <relationshipLabel>CARE Household Member Income</relationshipLabel>
    <relationshipName>CARE_Household_Member_Income</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>