force-app/main/default/objects/CARE_Household_Member_Income__c/fields/INCOME_DOC_TYPE__c.field-meta.xml
<CustomField>
    <fullName>INCOME_DOC_TYPE__c</fullName>
    <label>INCOME_DOC_TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1099R</fullName>
            </value>
            <value>
                <fullName>Award Letter -Categorical</fullName>
            </value>
            <value>
                <fullName>Award Letter -Categorical Fixed</fullName>
            </value>
            <value>
                <fullName>Award Letter</fullName>
            </value>
            <value>
                <fullName>Bank Statement</fullName>
            </value>
            <value>
                <fullName>Check Stub</fullName>
            </value>
            <value>
                <fullName>Check Stub 2</fullName>
            </value>
            <value>
                <fullName>Court Document</fullName>
            </value>
            <value>
                <fullName>Investment Account Statement</fullName>
            </value>
            <value>
                <fullName>IRS 1040 2018</fullName>
            </value>
            <value>
                <fullName>IRS 1040 2019</fullName>
            </value>
            <value>
                <fullName>IRS 1040 SR</fullName>
            </value>
            <value>
                <fullName>IRS 1040X</fullName>
            </value>
            <value>
                <fullName>IRS 1099</fullName>
            </value>
            <value>
                <fullName>IRS Transcript</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Profit and Loss Statement</fullName>
            </value>
            <value>
                <fullName>Settlement Document</fullName>
            </value>
            <value>
                <fullName>Signed Letter</fullName>
            </value>
            <value>
                <fullName>Signed Letter W/O Amount</fullName>
            </value>
            <value>
                <fullName>Verification of Non Filing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>