force-app/main/default/objects/CARE_Household_Member_Income__c/fields/INCOME_FORM_TYPE__c.field-meta.xml
<CustomField>
    <fullName>INCOME_FORM_TYPE__c</fullName>
    <label>INCOME_FORM_TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Award Letter Categorical</fullName>
            </value>
            <value>
                <fullName>1040 X</fullName>
            </value>
            <value>
                <fullName>1099</fullName>
            </value>
            <value>
                <fullName>Transcript</fullName>
            </value>
            <value>
                <fullName>IRS 1040 2019</fullName>
            </value>
            <value>
                <fullName>Award Letter Categorical Fixed</fullName>
            </value>
            <value>
                <fullName>Bank Statement</fullName>
            </value>
            <value>
                <fullName>Multi Pay Periods Two</fullName>
            </value>
            <value>
                <fullName>Multi Pay Periods</fullName>
            </value>
            <value>
                <fullName>IRS 1040 SR</fullName>
            </value>
            <value>
                <fullName>IRS 1040 2018</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>