force-app/main/default/objects/CARE_Household_Member_Income__c/fields/INCOME_SOURCE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>INCOME_SOURCE_TYPE__c</fullName>
    <label>INCOME_SOURCE_TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pension/Annuities</fullName>
            </value>
            <value>
                <fullName>Retirement</fullName>
            </value>
            <value>
                <fullName>Categorical</fullName>
            </value>
            <value>
                <fullName>Categorical Fixed</fullName>
            </value>
            <value>
                <fullName>Foster Care Payments</fullName>
            </value>
            <value>
                <fullName>High Usage</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Online Submission</fullName>
            </value>
            <value>
                <fullName>School Grants</fullName>
            </value>
            <value>
                <fullName>Social Security - SSA</fullName>
            </value>
            <value>
                <fullName>Social Security - SSDI</fullName>
            </value>
            <value>
                <fullName>Social Security - SSI</fullName>
            </value>
            <value>
                <fullName>Unemployment Benefits</fullName>
            </value>
            <value>
                <fullName>Union Strike Fund Benefits</fullName>
            </value>
            <value>
                <fullName>VA Benefits</fullName>
            </value>
            <value>
                <fullName>Worker&apos;s Compensation</fullName>
            </value>
            <value>
                <fullName>Insurance/Legal Settlements</fullName>
            </value>
            <value>
                <fullName>Child Support</fullName>
            </value>
            <value>
                <fullName>Contract Work</fullName>
            </value>
            <value>
                <fullName>Spousal Support</fullName>
            </value>
            <value>
                <fullName>Wages and Salaries</fullName>
            </value>
            <value>
                <fullName>Dividends/Capital Gains</fullName>
            </value>
            <value>
                <fullName>IRA/401K</fullName>
            </value>
            <value>
                <fullName>Farm Income</fullName>
            </value>
            <value>
                <fullName>Gambling/Lottery Winnings</fullName>
            </value>
            <value>
                <fullName>Rental Income</fullName>
            </value>
            <value>
                <fullName>Self-Employment</fullName>
            </value>
            <value>
                <fullName>Cash/Gifts</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>