force-app/main/default/objects/CARE_Household_Member_Income__c/fields/IS_1040__c.field-meta.xml
<CustomField>
    <fullName>IS_1040__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS 1040</label>
    <type>Checkbox</type>
</CustomField>