force-app/main/default/objects/CARE_Household_Member_Income__c/fields/IS_CATEGORICAL__c.field-meta.xml
<CustomField>
    <fullName>IS_CATEGORICAL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS CATEGORICAL</label>
    <type>Checkbox</type>
</CustomField>