force-app/main/default/objects/CARE_Household_Member_Income__c/fields/IS_CATEGORICAL_FIXED__c.field-meta.xml
<CustomField>
    <fullName>IS_CATEGORICAL_FIXED__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS CATEGORICAL FIXED</label>
    <type>Checkbox</type>
</CustomField>