force-app/main/default/objects/CARE_Household_Member_Income__c/fields/IS_DOC_VALID__c.field-meta.xml
<CustomField>
    <fullName>IS_DOC_VALID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS DOC VALID</label>
    <type>Checkbox</type>
</CustomField>