force-app/main/default/objects/CARE_Household_Member_Income__c/fields/IS_FILING_JOINTLY__c.field-meta.xml
<CustomField>
    <fullName>IS_FILING_JOINTLY__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS FILING JOINTLY</label>
    <type>Checkbox</type>
</CustomField>