force-app/main/default/objects/CARE_Household_Member_Income__c/fields/LINE_11__c.field-meta.xml
<CustomField>
    <fullName>LINE_11__c</fullName>
    <label>LINE 11</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>