force-app/main/default/objects/CARE_Household_Member_Income__c/fields/LINE_12__c.field-meta.xml
<CustomField>
    <fullName>LINE_12__c</fullName>
    <label>LINE 12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>