force-app/main/default/objects/CARE_Household_Member_Income__c/fields/LINE_20B__c.field-meta.xml
<CustomField>
    <fullName>LINE_20B__c</fullName>
    <label>LINE 20B</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>