force-app/main/default/objects/CARE_Household_Member_Income__c/fields/Line_4C__c.field-meta.xml
<CustomField>
    <fullName>Line_4C__c</fullName>
    <label>Line 4C</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>