force-app/main/default/objects/CARE_Household_Member_Income__c/fields/NAME_Member_Income_Seq__c.field-meta.xml
<CustomField>
    <fullName>NAME_Member_Income_Seq__c</fullName>
    <displayFormat>CTMI{0000000000}</displayFormat>
    <label>NAME  (Member Income Seq)</label>
    <type>AutoNumber</type>
</CustomField>