force-app/main/default/objects/CARE_Household_Member_Income__c/fields/NO_MONTHS__c.field-meta.xml
<CustomField>
    <fullName>NO_MONTHS__c</fullName>
    <label>NO MONTHS</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>