force-app/main/default/objects/CARE_Household_Member_Income__c/fields/PEV_RESULT_NO__c.field-meta.xml
<CustomField>
    <fullName>PEV_RESULT_NO__c</fullName>
    <label>PEV RESULT NO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>