force-app/main/default/objects/CARE_Household_Member_Income__c/fields/ROLLOVER__c.field-meta.xml
<CustomField>
    <fullName>ROLLOVER__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ROLLOVER</label>
    <type>Checkbox</type>
</CustomField>