force-app/main/default/objects/CARE_Household_Member_Income__c/fields/SCHEDULE_1__c.field-meta.xml
<CustomField>
    <fullName>SCHEDULE_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SCHEDULE 1</label>
    <type>Checkbox</type>
</CustomField>